# TextProposals

./: .gitignore  CMakeLists.txt
img2hierarchy/: CMakeLists.txt
img2hierarchy_cnn/: CMakeLists.txt  img2hierarchy_cnn.cpp
text_proposal/: CMakeLists.txt  min_bounding_box.h
